# lds

./: CMakeLists.txt  README  README.md  package.xml
include/: controller.h
launch/: all.launch  bll.launch  fetch.launch  main.launch  services.launch
scripts/: automas.py  demo_python.py  move_server.py  py_follower.py  temail.py
scripts/ursim-5.9.4.1031232/: histogram.properties  install.sh  log_history.txt  metadata.n3  start-ursim.sh  starturcontrol.sh  ur-serial.UR10  ur-serial.UR16  ur-serial.UR3  ur-serial.UR5  ursim-certificate-check.sh  version.sh
scripts/ursim-5.9.4.1031232/.certificate/: URRobotRoot.crt
scripts/ursim-5.9.4.1031232/.java/fonts/1.8.0_275/: fcinfo-1-singularity-UX310UQK-Ubuntu-18.04-en.properties
scripts/ursim-5.9.4.1031232/.polyscope/: java-logger.xml  logging.properties  platform.properties  remotecontrol.properties  welcome.properties
scripts/ursim-5.9.4.1031232/.urcontrol/: safety.conf.UR5  server.conf
scripts/ursim-5.9.4.1031232/GUI/bundle/: urcaps
scripts/ursim-5.9.4.1031232/GUI/conf/: config.properties
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle1/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle10/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle100/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle101/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle102/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle103/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle104/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle105/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle106/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle107/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle108/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle109/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle11/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle110/: bundle.info
scripts/ursim-5.9.4.1031232/GUI/felix-cache/bundle111/: bundle.info
scripts/ursim-5.9.4.1031232/flightreports/: psm.ura
scripts/ursim-5.9.4.1031232/programs.UR16/: license.p7b
scripts/ursim-5.9.4.1031232/programs.UR5/: 127.0.0.1.script  127.0.0.1.txt  127.0.0.1.urp  default.installation  default.variables
src/: ar_follower.cpp  attach_object_server.cpp  controller.cpp  create_environment_server.cpp  main.cpp  moveCartesianServer.cpp  move_beer_server.cpp  move_client.cpp  move_joint_server.cpp  move_pose_server.cpp  robot_model_and_robot_state_tutorial.cpp  temp.cpp
srv/: move_beer.srv  move_joint.srv  move_pose.srv  pose.srv  request.srv
(+303 files in other folders)
